<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Whiteboard Cast</string>
    <string name="record_start_button">Rec Start</string>
    <string name="record_stop_button">Rec Stop</string>
    <string name="menu_about">About this app</string>
    <string name="menu_quit">Quit</string>
    <string name="query_back_message">Really finish WhiteBoardCast app?</string>
    <string name="about_title">Privacy Policy and Open Source Credits</string>
    <string name="label_view">View</string>
    <string name="label_share">Share</string>
    <string name="query_title">View or Share?</string>
    <string name="query_merge_title">Try postprocess?</string>
    <string name="query_merge_body">Previous working file exists.\nTry postprocess again?</string>
    <string name="label_rename">Rename</string>
    <string name="label_file_name">File Name</string>
    <string name="label_save">Save</string>
    <string name="title_activity_slide_list">Manage Slides</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_slides">Slides</string>
    <string name="action_up">Up</string>
    <string name="action_down">Down</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_multi_gallery">Pick Slides</string>
    <string name="label_done">Done</string>
    <string name="action_import">Import</string>
    <string name="action_delete_all">Delete All</string>
    <string name="label_plane">Plane</string>
    <string name="new_plane_description">Normal presentation without slides.</string>
    <string name="label_slides">Slides</string>
    <string name="new_slides_description">Slide based presentation.</string>
    <string name="menu_new">New</string>
    <string name="action_start">Start</string>
    <string name="menu_settings">Settings</string>
    <string name="title_disable_touch">Stylus only mode</string>
    <string name="summary_disable_touch">Disable finger touch and respond to stylus only. For stylus equipped devices mode.</string>
    <string name="label_export_pdf">Export PDF</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pick_image_label">Image</string>

</resources>
