<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_plane"
        android:id="@+id/buttonPlane"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/new_button_plane"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_plane_description"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/buttonPlane"
        android:layout_toRightOf="@+id/buttonPlane" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_slides"
        android:id="@+id/buttonSlides"
        android:drawableLeft="@drawable/new_button_slides"
        android:drawablePadding="5dp"
        android:layout_below="@+id/buttonPlane"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_slides_description"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/buttonSlides"
        android:layout_toRightOf="@+id/buttonSlides" />

</RelativeLayout>